--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
-  background-color:#4f46e5
+  height: 100vh;
+  background-color: #4f46e5;
 }
